More Java 17 migration